src/specific_models/bot-iot/attack_identification/logfile.2020-07-15-16_23_34.log
  File "cnn_sample_based_2d_out-one.py", line 384
    filter_size = 2):
              ^
SyntaxError: invalid syntax
